tests/fails/2.mat
matrix a[1,1]
scalar b

for (b in 1: 100: 2) {

}

for (b in 1: 100: 2) {


} 

for (b in 1 : 100 : a) {


}

b = choose (a, 1, 1, 1)
b= choose (1, a, 1, 1)
b = choose (1, 1, a, 1)
b= choose (1, 1, 1, a)